fix dark mode

--- a/src/components/quiz/Card.scss
+++ b/src/components/quiz/Card.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column-reverse;
     align-items: center;
-    
+    color: black;
     button {
         border: none;
         background-color: transparent;
